generate/testdata/errors/MissingTypeName.go
package errors

const _ = `# @genqlient
	query MyQuery { i { f } }
`
